# houston_ultra

./: .gitignore  Cargo.toml  arrancar.md  cli-deps.json
always-on/: Dockerfile  docker-entrypoint.sh
app/: vite.config.ts
app/tests/: activate-agent-runtime.test.ts  (+10 more)
cloud/: README.md  SECURITY.md  cloud-agent-features.json  cloud-agent-sync-migration-plan.md  cloud-agents-mvp.md  cloud-agents-ops.md  openrouter-qa-checklist.md  provider-api-key-qa-checklist.md  provider-ui-regression-checklist.md  provider-ux-api-keys-feature.json
cloud/control-plane/: Cargo.toml  Dockerfile  Dockerfile.k8s  Dockerfile.k8s.fast  README.md
cloud/control-plane/deploy/: .env.example  Caddyfile  DOKPLOY.md  README.md  docker-compose.dokploy.yml  docker-compose.yml  smoke.sh
cloud/control-plane/deploy/profiles/: cloudhouston.blyxlabs.dev.env.example  local.env.example
cloud/control-plane/migrations/: 001_init.sql  002_worker_agents.sql  003_entitlements_default_cap.sql
cloud/control-plane/src/: agent_access.rs  agents.rs  audit.rs  auth.rs  bootstrap_bundle.rs  config.rs  db.rs  docker_runtime.rs  engine_provision.rs  entitlements.rs  error.rs  k8s_runtime.rs  k8s_specs.rs  lib.rs  main.rs  proxy.rs  routes.rs  runtime.rs  runtime_wake.rs  shares.rs  state.rs  ws_proxy.rs
cloud/control-plane/tests/: bootstrap_bundle_test.rs  ensure_entitlements.rs  proxy_path_test.rs  sharing_access.rs  worker_agents_test.rs
knowledge-base/: agent-manifest.md  cloud-harness.md  engine-protocol.md
scripts/: export-cloud-product-prompt.sh  generate-cloud-token.sh  sync-supabase-db-env.sh
(+210 files in other folders)
