[package]
name = "houston-cloud-control-plane"
version = "0.1.0"
edition = "2021"
description = "Houston Cloud control plane — auth, entitlements, agent lifecycle, engine proxy"
license = "MIT"
repository = "https://github.com/gethouston/houston"

[[bin]]
name = "houston-cloud-control-plane"
path = "src/main.rs"

[[bin]]
name = "houston-cloud-mint-token"
path = "src/bin/mint-token.rs"

[dependencies]
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { workspace = true }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid", "json"] }
jsonwebtoken = "9"
sha2 = "0.10"
subtle = "2.6"
rand = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
futures-util = "0.3"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
houston-engine-protocol = { path = "../../engine/houston-engine-protocol" }

[dev-dependencies]
tokio-test = "0.4"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
axum = { version = "0.7", features = ["ws", "macros"] }
